FlightPath 5.x Changelog
========================

2016-02-15
  Fixed bug in misc.inc which was causing a new database connection *every time* a connection was requested (instead of re-using the
  global one).
  

2016-02-13
  Fixed bug in install script so that track major codes can have up to 20 characters.
  
  Modified the add degree form, to check to make sure tracks and major codes don't contain spaces,
  as well as fall below the 20 character limit.
  
  Fixed but which was intruduced by removing submissions form sessions.  As a result, forms which didn't
  validate didn't retain values.  Instead made it so only password fields were hidden from the session.
  
  Added concept of an "advising weight" to degrees, and on the degree edit form.  This lets the admin set
  the order in which degrees are presented to a student.  Lower weights appear first.  Added new popup help
  topics to the degree edit page to help explain.
    

2016-02-11
  Made it to where combined degrees will overwrite semester block titles if they are set to.
  

2016-02-09
  Fixed MySQL bug when editing groups.  Fixed bug where group_min_hours_required should be group_min_hours_allowed in the database.
  Fixed bug in degree list filter when not using clean URLs.
  Fixed missing argument bug in db.inc for db_affected_rows().
  

2016-02-01
  Removed section from system.module where submissions were being temporarily stored in the session.  It wasn't being used anyway,
  and it presented a possible security issue on improperly secured servers.
  

2016-01-19
  Changed default password scheme to use new D7 inspired PHPass technique, instead of basic md5's.  Added new password.inc file, virtually identical to the
  one which ships with D7.
  

2016-01-14
  Converted the advising history tab to use the content render api, so other modules can add content to that page.
  Also made it so that past advising histories appear in a collapsible fieldset, to save space.
  

2016-01-11