@@ -673,7 +673,7 @@ function advise_user_can_view_advising_session_access_callback() {
 function advise_display_popup_group_select() {
   global $current_student_id, $fp, $screen, $degree_plan;
   $rtn = "";
-  
+      
   advise_init_screen();
   fp_add_js(fp_get_module_path("advise") . "/js/advise.js");
   
@@ -688,7 +688,6 @@ function advise_display_popup_group_select() {
   $perform_action2 = @$_REQUEST["perform_action2"]; 
 
 
-
   // If this is a "blank" degree, make sure we set the degree_id correctly.
   if($blank_degree_id != "") {    
     $degree_plan = new DegreePlan($blank_degree_id);
@@ -698,7 +697,9 @@ function advise_display_popup_group_select() {
   }
 
   if (!$group = $degree_plan->find_placeholder_group($group_id, $semester_num)) {
-    fpm("Could not find group $group_id in semester $semester_num.");
+    fpm("Could not find group (id: $group_id) in semester (num: $semester_num).");
+    fpm($degree_plan);
+    return;
   }
 
   if ($group_id == -88) { 
@@ -917,7 +918,7 @@ function advise_perm() {
 function advise_display_view($view = "view") {
   global $user, $fp, $degree_plan, $screen;
   $rtn = "";
-
+        
   if ($view == "what-if") {
     $GLOBALS["fp_advising"]["advising_what_if"] = "yes";  
     $_REQUEST["advising_what_if"] = "yes";
@@ -926,9 +927,11 @@ function advise_display_view($view = "view") {
     $GLOBALS["fp_advising"]["advising_what_if"] = "no";
     $_REQUEST["advising_what_if"] = "no";
   }
-
+  
   // Initialize everything we need to initialize for this advising session.
   advise_init_screen();      
+    
+  
   fp_add_js(fp_get_module_path("advise") . "/js/advise.js");  
   // Add advise.css to the screen
   fp_add_css(fp_get_module_path("advise") . "/css/advise.css");
@@ -952,9 +955,9 @@ function advise_display_view($view = "view") {
     // This is a normal advising screen.  Either View or WhatIf.
 
     //$page_content .= $screen->display_view_options();
-
+      
     $screen->build_screen_elements();
-
+     
     $form_token = md5("advise_display_view" . fp_token());
         
     $vurl = fp_url($view);    
@@ -963,6 +966,7 @@ function advise_display_view($view = "view") {
              <input type='hidden' name='form_token' value='$form_token'>
              <table class='fp-semester-table'>";
     $rtn .= $screen->display_screen();
+      
     $rtn .= "</table>";
     // Add in the required "advising variables"
     $rtn .= $screen->get_hidden_advising_variables("save_draft");
@@ -989,6 +993,7 @@ function advise_display_view($view = "view") {
     fp_set_page_sub_tabs($tab_array);
     
     watchdog("view_by_$screen->view", "", array(), WATCHDOG_DEBUG);
+    
                     
   }
 
@@ -1008,9 +1013,10 @@ function advise_display_view($view = "view") {
   // Should we re-cache the course inventory?  If there have been any changes
   // to it, then we will see that in a GLOBALS variable...
   if (@$GLOBALS["cache_course_inventory"] == true)
-  {
-    $_SESSION["fp_cache_course_inventory"] = serialize(@$GLOBALS["fp_course_inventory"]);
+  {    
+    $_SESSION["fp_cache_course_inventory"] = serialize(@$GLOBALS["fp_course_inventory"]);    
   }
+   
    
   return $rtn;
 }
@@ -1681,6 +1687,8 @@ function advise_init_screen() {
   
   $db = get_global_database_handler();
   
+
+  
   // Insert our advising vars into the GLOBALS array for easy use later.
   advise_init_advising_variables();    
     
@@ -1726,13 +1734,14 @@ function advise_init_screen() {
 
 
   // Attempt to load the course inventory cache...
-  if ($course_inventory = unserialize($_SESSION["fp_cache_course_inventory"])) {
-    $GLOBALS["fp_course_inventory"] = $course_inventory;
+  if ($course_inventory = unserialize($_SESSION["fp_cache_course_inventory"])) {  
+    $GLOBALS["fp_course_inventory"] = $course_inventory;    
   }
-
+  
+  
 
   $bool_loaded = FALSE;
-  if ($GLOBALS["fp_advising"]["load_from_cache"] == "yes" && $cache != "" && $fp = unserialize($cache)) {
+  if ($GLOBALS["fp_advising"]["load_from_cache"] == "yes" && $cache != "" && $fp = unserialize($cache)) {    
     $bool_loaded = TRUE;    
     $fp->db = get_global_database_handler();
     $student = $fp->student;
@@ -1740,8 +1749,9 @@ function advise_init_screen() {
     $degree_plan = $fp->degree_plan;
     $student->db = get_global_database_handler();
     $degree_plan->db = get_global_database_handler();
-  } 
-  
+  }
+   
+    
   if (!$bool_loaded) {    
     $fp = new FlightPath();
     $fp->init();    
@@ -1884,11 +1894,13 @@ function advise_init_screen() {
       // NOT in whatIf mode.  Normal.
 
       $_SESSION["cache_fp$csid"] = serialize($fp);
+      
             
     } 
     else {
       // We are in WhatIf mode.
       $_SESSION["cache_what_if$csid"] = serialize($fp);      
+            
 
 
     }
@@ -1904,8 +1916,7 @@ function advise_init_screen() {
   
   
 }
-
-
+ 
 
 
 
